@@ -76,7 +76,7 @@ add('A_Jagged_Mind', 'A_Jagged_Mind')
 add('A_Loonatics_Tale', 'A_Loonatics_Tale')
 add('A_Note_On_My_Life', 'A_Note_On_My_Life')
 add('A_Paige_Comic', 'A_Paige_Comic')
-add('A_PoKeMoN_comic_that_everyone_will_ignore_even_though_the_author_puts_way_more_work_into_it_than_some_other_very_popular_PoKeMoN_comics_that_get_over_nine_thousand_views_on_days_they_DONT_update_What_the_hell', 'A_PoKeMoN_comic_that_everyone_will_ignore_even_though_the_author_puts_way_more_work_into_it_than_some_other_very_popular_PoKeMoN_comics_that_get_over_nine_thousand_views_on_days_they_DONT_update_What_the_hell')
+add('A_PoKeMoN_comic_that_everyone_will_ignore_even_though_the_author_puts_way_more_work_into_it_than_som', 'A_PoKeMoN_comic_that_everyone_will_ignore_even_though_the_author_puts_way_more_work_into_it_than_some_other_very_popular_PoKeMoN_comics_that_get_over_nine_thousand_views_on_days_they_DONT_update_What_the_hell')
 add('A_Roll_of_the_Dice', 'A_Roll_of_the_Dice')
 add('A_Step_Out_of_Phase', 'A_Step_Out_of_Phase')
 add('A_Tale_of_Two_Sprites', 'A_Tale_of_Two_Sprites')
@@ -816,7 +816,7 @@ add('Outer_Space_Alien_Nazis_From_Outer_Space', 'Outer_Space_Alien_Nazis_From_Ou
 add('Outlawed', 'Outlawed')
 add('Overshadow', 'Overshadow')
 add('Oyer', 'Oyer')
-add('POKETTO_MONSUTAA_SPECIAL_SUPER_EX_ADVENTURE_XXXVX_THE_CHRONICLES_OF_RED_BLUE_GREEN_AND_A_BUNCH_OF_OTHER_KIDS_WITH_COLORS_FOR_NAMES', 'POKETTO_MONSUTAA_SPECIAL_SUPER_EX_ADVENTURE_XXXVX_THE_CHRONICLES_OF_RED_BLUE_GREEN_AND_A_BUNCH_OF_OTHER_KIDS_WITH_COLORS_FOR_NAMES')
+add('POKETTO_MONSUTAA_SPECIAL_SUPER_EX_ADVENTURE_XXXVX_THE_CHRONICLES_OF_RED_BLUE_GREEN_AND_A_BUNCH_OF_OT', 'POKETTO_MONSUTAA_SPECIAL_SUPER_EX_ADVENTURE_XXXVX_THE_CHRONICLES_OF_RED_BLUE_GREEN_AND_A_BUNCH_OF_OTHER_KIDS_WITH_COLORS_FOR_NAMES')
 add('PSI', 'PSI')
 add('PUTRID_MEAT', 'PUTRID_MEAT')
 add('Pagan_Zoetrope', 'Pagan_Zoetrope')
@@ -997,7 +997,7 @@ add('Solar_Salvage', 'Solar_Salvage')
 add('Something_Else_Anime_Theater', 'Something_Else_Anime_Theater')
 add('Something_Like_Life', 'Something_Like_Life')
 add('Something_To_Do', 'Something_To_Do')
-add('Somewhere_in_San_Fransisco_Half_Way_Beyond_The_Bridge_and_The_Tower_Lies_A_Place_Where_Nothing_is_Ever_What_It_Seems_On_A_Day_to_Day_Basis_Because_That_Is_What_Happens_in_This_Kinda_Place', 'Somewhere_in_San_Fransisco_Half_Way_Beyond_The_Bridge_and_The_Tower_Lies_A_Place_Where_Nothing_is_Ever_What_It_Seems_On_A_Day_to_Day_Basis_Because_That_Is_What_Happens_in_This_Kinda_Place')
+add('Somewhere_in_San_Fransisco_Half_Way_Beyond_The_Bridge_and_The_Tower_Lies_A_Place_Where_Nothing_is_Ev', 'Somewhere_in_San_Fransisco_Half_Way_Beyond_The_Bridge_and_The_Tower_Lies_A_Place_Where_Nothing_is_Ever_What_It_Seems_On_A_Day_to_Day_Basis_Because_That_Is_What_Happens_in_This_Kinda_Place')
 add('Songs_of_An_Angel', 'Songs_of_An_Angel')
 add('Sonic_A_Heroes_Tail', 'Sonic_A_Heroes_Tail')
 add('Sonic_Advance_The_Real_Story', 'Sonic_Advance_The_Real_Story')
