@@ -9,7 +9,7 @@ import sys
 import os
 sys.path.append(os.path.join(os.path.dirname(__file__), ".."))
 from dosagelib.util import getPageContent, asciify, unescape, tagre
-from scriptutil import contains_case_insensitive, capfirst, save_result, load_result
+from scriptutil import contains_case_insensitive, capfirst, save_result, load_result, truncate_name
 
 json_file = __file__.replace(".py", ".json")
 
@@ -54,7 +54,7 @@ def print_results(args):
     for name, url in sorted(load_result(json_file).items()):
         if name in exclude_comics:
             continue
-        print("add(%r, %r)" % (str(name), str(url)))
+        print("add(%r, %r)" % (str(truncate_name(name)), str(url)))
 
 
 if __name__ == '__main__':
