@@ -10,7 +10,7 @@ import os
 sys.path.append(os.path.join(os.path.dirname(__file__), ".."))
 from dosagelib.util import getPageContent, asciify, unescape, tagre
 from dosagelib.scraper import get_scrapers
-from scriptutil import contains_case_insensitive, capfirst, save_result, load_result
+from scriptutil import contains_case_insensitive, capfirst, save_result, load_result, truncate_name
 
 json_file = __file__.replace(".py", ".json")
 
@@ -424,7 +424,7 @@ def print_results(args):
             prefix = '#'
         else:
             prefix = ''
-        print("%sadd(%r, %r)" % (prefix, str(name), str(url)))
+        print("%sadd(%r, %r)" % (prefix, str(truncate_name(name)), str(url)))
 
 
 if __name__ == '__main__':
